--- a/box-shadow.css
+++ b/box-shadow.css
@@ -1,3 +1,6 @@
 -webkit-box-shadow: rgba(30,46,62,0.2) 0px 18px 16px;
 -moz-box-shadow: rgba(30,46,62,0.2) 0 18px 16px; 
 box-shadow: rgba(30,46,62,0.2) 0 18px 16px;
+
+
+box-shadow: rgba(216,216,216,0.3) 0px 1px 5px;
